--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -2,13 +2,17 @@
 
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}">
+  <script src="{{ url_for('static', filename='js/gallery.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
 
 <div class="container">
   <div id="buttons-menu" class="navbar-menu">
-    <input type="image" class="menu-button" src="{{ url_for('static', filename='icons/uploadButton.png')}}"/>
+    <label for="upload-button">
+      <img id="image-preview" class="menu-button" src="{{ url_for('static', filename='icons/uploadButton.png')}}" alt="your image" />
+    </label>
+    <input type="file" id="upload-button" title="Upload" accept="image/png, image/jpeg" />
   </div>
 </div>
 <script type="text/javascript">
