--- a/project/static/css/gallery.css
+++ b/project/static/css/gallery.css
@@ -63,3 +63,35 @@ img { max-width: 100%; max-height: 100%; }
 #gallery-box {
   display: flexbox;
 }
+
+img.gallery-item {
+  height: 15rem;
+}
+
+.overlay-content {
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  padding: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: ;
+}
+
+.spinner {
+  width: 75px;
+  height: 75px;
+  display: inline-block;
+  border-width: 2px;
+  border-color: rgba(255, 255, 255, 0.05);
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
+  border-radius: 100%;
+  border-style: solid;
+}
+
+@keyframes spin {
+100% {
+  transform: rotate(360deg);
+}
+}
