--- a/project/static/css/gallery.css
+++ b/project/static/css/gallery.css
@@ -123,9 +123,6 @@ img.gallery-item, .item-overlay {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
 }
-.item-overlay:hover:after, .item-overlay:hover:before {
-  opacity:1;
-}
 
 .select-button {
   position: absolute;
@@ -134,4 +131,17 @@ img.gallery-item, .item-overlay {
   margin: .5rem;
   width: 2.5rem;
   height: 2.5rem;
+  z-index: 1;
+
+  opacity: 0;
+  transition: all 0.5s;
+  -webkit-transition: all 0.5s;
+}
+
+.item-overlay:hover:after, .item-overlay:hover:before{
+  opacity: 1;
+}
+
+.select-button:hover {
+  opacity: 1;
 }
