--- a/project/static/css/gallery.css
+++ b/project/static/css/gallery.css
@@ -39,10 +39,17 @@ img.menu-button { max-width: 100%; max-height: 100%; }
 /* .menu-button { background-color: #00d1b2; } */
 .selection-button {
   background-color: transparent;
-  display: none;
+  display: inline-block;
+  align-items: center;
 }
 .selection-button:hover {
   background-color: #c0c0c0; 
+}
+
+.selection-button-label {
+  display: inline-block;
+  color: black;
+  padding: .8rem;
 }
 
 #selection-buttons {
@@ -66,6 +73,7 @@ img.menu-button { max-width: 100%; max-height: 100%; }
   position: absolute;
   left: 0%;
   bottom: 0%;
+  z-index: 3;
 }
 
 .upload-item {
@@ -200,4 +208,74 @@ img.gallery-item, .item-overlay {
 
 .context-menu ul li:hover {
   background: rgb(57, 91, 79);
+}
+
+#viewer, #viewer-img, .viewer-lens, .viewer-img-zoom {
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#viewer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 4;
+
+  background-color: rgb(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+
+#viewer-img {
+  height: 90%;
+  cursor: zoom-in;
+}
+
+.viewer-lens {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  width: 300px;
+  height: 300px;
+  opacity: 0;
+}
+
+.viewer-img-zoom {
+  border: 1px solid #d4d4d4;
+  padding-left: 50%;
+  height: 90%;
+  overflow: hidden;
+  background-repeat: no-repeat;
+}
+
+#menu-button {
+  max-width: 100%;
+  max-height: 100%;
+
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  cursor: pointer;
+  display: inline-block;
+  height: 55px;
+  line-height: 20px;
+  list-style: none;
+  margin: auto;
+  outline: none;
+  padding: 15px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  vertical-align: baseline;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+#menu-button:hover {
+  background: #00b89c;
 }
