--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -16,6 +16,7 @@
 </div>
 
 <div class="container">
+  <img id="menu-button" src="{{ url_for('static', filename='icons/menuButton.png') }}" alt="Menu" />
   <div id="buttons-menu" class="navbar-menu">
 
     <div id="upload">
@@ -26,10 +27,18 @@
     <input type="file" id="upload-button" title="Upload" accept="image/png, image/jpeg" />
 
     <div id="selection-buttons">
-      <img id="select-all-button" class="selection-button" src="{{ url_for('static', filename='icons/selectAll.png')}}" alt="Select all" />
-      <img id="deselect-all-button" class="selection-button" src="{{ url_for('static', filename='icons/blackCross.png')}}" alt="Close selection" />
+      <div id="select-all-button" class="selection-button" onclick="selectAll()">
+        <img src="{{ url_for('static', filename='icons/selectAll.png')}}" style="display: inline-block;" alt="Select all" />
+        <h1 class="selection-button-label">Select All</h1>
+      </div>
+      <img id="deselect-all-button" class="selection-button" onclick="deselectAll()" src="{{ url_for('static', filename='icons/blackCross.png')}}" alt="Close selection" />
     </div>
   </div>
+</div>
+
+<div id="viewer">
+  <img id="viewer-img" class="viewer-img" src="" alt="Viewer" />
+  <div id="viewer-zoom" class="viewer-img-zoom" alt="Result"></div>
 </div>
 
 <script type="text/javascript">
@@ -49,9 +58,9 @@
   {% if not images %}
     <h1 id="label-nothing" class="subtitle" style="color:black; margin:20rem auto;">There's nothing here.. Add something?</h1>
   {% endif %}
-  {% for name, value in images.items() %}
+  {% for key, value in images.items() %}
     <script type="text/javascript">
-      createGalleryItem("{{ name }}", "{{ value }}");
+      createGalleryItem("{{ key.split(':')[1] }}", "{{ value }}");
     </script>
   {% endfor %}
   <script type="text/javascript">
