--- a/project/static/css/gallery.css
+++ b/project/static/css/gallery.css
@@ -18,16 +18,13 @@ img.menu-button { max-width: 100%; max-height: 100%; }
   color: #FFFFFF;
   cursor: pointer;
   display: inline-block;
-  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  height: 55px;
-  line-height: 20px;
-  list-style: none;
+
+  height: 5.6rem;
   margin: auto;
   outline: none;
-  padding: 15px;
+  padding: 1.3rem;
   position: relative;
+
   text-align: center;
   text-decoration: none;
   transition: color 100ms;
@@ -36,7 +33,7 @@ img.menu-button { max-width: 100%; max-height: 100%; }
   -webkit-user-select: none;
   touch-action: manipulation;
 }
-/* .menu-button { background-color: #00d1b2; } */
+
 .selection-button {
   background-color: transparent;
   display: inline-block;
@@ -249,33 +246,23 @@ img.gallery-item, .item-overlay {
   height: 90%;
   overflow: hidden;
   background-repeat: no-repeat;
+  opacity: 0.9;
+  
+  transition: background-position 0.1s;
+  -webkit-transition: background-position 0.1s;
 }
 
-#menu-button {
-  max-width: 100%;
-  max-height: 100%;
-
-  border-radius: 8px;
-  border-style: none;
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-block;
-  height: 55px;
-  line-height: 20px;
-  list-style: none;
-  margin: auto;
-  outline: none;
-  padding: 15px;
-  position: relative;
-  text-align: center;
-  text-decoration: none;
-  transition: color 100ms;
-  vertical-align: baseline;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+.viewer-menu {
+  width: 100%;
+  height: 2rem;
+  background: red;
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
 
-#menu-button:hover {
-  background: #00b89c;
+#gallery-container {
+  position: absolute;
+  right: 0;
 }
