--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -8,44 +8,45 @@
     <title>Storage Saver</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <script src="{{ url_for('static', filename='js/base.js') }}" type="text/javascript"></script>
     {% block head %}
     {% endblock%}
 </head>
 
 <body>
     <section class="hero is-primary is-fullheight">
-
         <div class="hero-head">
             <nav class="navbar">
-                <div class="container">
-                    <div id="navbarMenuHeroA" class="navbar-menu">
-                        <div class="navbar-end">
-                            <a href="{{ url_for('main.index') }}" class="navbar-item">
-                                Home
-                            </a>
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.gallery') }}" class="navbar-item">
-                                Gallery
-                            </a>
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
-                                Profile
-                            </a>
-                            {% endif %}
-                            {% if not current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.login') }}" class="navbar-item">
-                                Login
-                            </a>
-                            <a href="{{ url_for('auth.signup') }}" class="navbar-item">
-                                Sign Up
-                            </a>
-                            {% endif %}
-                            {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('auth.logout') }}" class="navbar-item">
-                                Logout
-                            </a>
-                            {% endif %}
-                        </div>
+                <div id="menu-container" class="container">
+                    <div id="sidebar-menu" state="closed">
+                    <!-- <div id="navbarMenuHeroA" class="navbar-menu"> -->
+                        <a href="{{ url_for('main.index') }}" class="sidebar-button">
+                            Home
+                        </a>
+                        {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('main.gallery') }}" class="sidebar-button">
+                            Gallery
+                        </a>
+                        <a href="{{ url_for('main.profile') }}" class="sidebar-button">
+                            Profile
+                        </a>
+                        {% endif %}
+                        {% if not current_user.is_authenticated %}
+                        <a href="{{ url_for('auth.login') }}" class="sidebar-button">
+                            Login
+                        </a>
+                        <a href="{{ url_for('auth.signup') }}" class="sidebar-button">
+                            Sign Up
+                        </a>
+                        {% endif %}
+                        {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('auth.logout') }}" class="sidebar-button">
+                            Logout
+                        </a>
+                        {% endif %}
                     </div>
+                    <img id="menu-button" title="Menu" src="{{ url_for('static', filename='icons/menuButton.png') }}" onclick="toggleMenu()" alt="Menu" />
                 </div>
             </nav>
         </div>
