--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -15,13 +15,12 @@
   </ul>
 </div>
 
-<div class="container">
-  <img id="menu-button" src="{{ url_for('static', filename='icons/menuButton.png') }}" alt="Menu" />
+<div id="gallery-container" class="container">
   <div id="buttons-menu" class="navbar-menu">
 
     <div id="upload">
       <label for="upload-button">
-        <img id="upload-image" class="menu-button" src="{{ url_for('static', filename='icons/uploadButton.png')}}" alt="Upload" />
+        <img id="upload-image"  title="Upload Media" class="menu-button" src="{{ url_for('static', filename='icons/uploadButton.png')}}" alt="Upload" />
       </label>
     </div>
     <input type="file" id="upload-button" title="Upload" accept="image/png, image/jpeg" />
@@ -36,9 +35,12 @@
   </div>
 </div>
 
-<div id="viewer">
-  <img id="viewer-img" class="viewer-img" src="" alt="Viewer" />
-  <div id="viewer-zoom" class="viewer-img-zoom" alt="Result"></div>
+<div class="container">
+  <div id="viewer-menu" class="viewer-menu"></div>
+  <div id="viewer">
+    <img id="viewer-img" class="viewer-img" src="" alt="Viewer" />
+    <div id="viewer-zoom" class="viewer-img-zoom" alt="Result"></div>
+  </div>
 </div>
 
 <script type="text/javascript">
