--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section id="top-level" class="hero is-primary is-fullheight">
         <div class="hero-head">
             <nav class="navbar">
                 <div id="menu-container" class="container">
@@ -25,11 +25,27 @@
                             Home
                         </a>
                         {% if current_user.is_authenticated %}
+                        <a href="{{ url_for('main.profile') }}" class="sidebar-button">
+                            Profile
+                        </a>
+                        <!-- These routes need to be implemented -->
+                        <a href="{{ url_for('main.all_files') }}" class="sidebar-button">
+                            All Files
+                        </a>
                         <a href="{{ url_for('main.gallery') }}" class="sidebar-button">
                             Gallery
                         </a>
-                        <a href="{{ url_for('main.profile') }}" class="sidebar-button">
-                            Profile
+                        <a href="{{ url_for('main.file_manager') }}" class="sidebar-button">
+                            File Manager
+                        </a>
+                        <a href="{{ url_for('main.albums') }}" class="sidebar-button">
+                            Albums
+                        </a>
+                        <a href="{{ url_for('main.recently_deleted') }}" class="sidebar-button">
+                            Recently Deleted
+                        </a>
+                        <a href="{{ url_for('main.about_us') }}" class="sidebar-button">
+                            About Us
                         </a>
                         {% endif %}
                         {% if not current_user.is_authenticated %}
