--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -18,6 +18,10 @@
 <div id="gallery-container" class="container">
   <div id="buttons-menu" class="navbar-menu">
 
+    <div id="info">
+      <img id="info-button" title="Details" class="menu-button" src="{{ url_for('static', filename='icons/info.png')}}" onclick="toggleDetails()" alt="Details" />
+    </div>
+
     <div id="upload">
       <label for="upload-button">
         <img id="upload-image"  title="Upload Media" class="menu-button" src="{{ url_for('static', filename='icons/uploadButton.png')}}" alt="Upload" />
@@ -26,11 +30,18 @@
     <input type="file" id="upload-button" title="Upload" accept="image/png, image/jpeg" />
 
     <div id="selection-buttons">
-      <div id="select-all-button" class="selection-button" onclick="selectAll()">
+      <div title="Select All" id="select-all-button" class="selection-button" onclick="selectAll()">
         <img src="{{ url_for('static', filename='icons/selectAll.png')}}" style="display: inline-block;" alt="Select all" />
         <h1 class="selection-button-label">Select All</h1>
       </div>
-      <img id="deselect-all-button" class="selection-button" onclick="deselectAll()" src="{{ url_for('static', filename='icons/blackCross.png')}}" alt="Close selection" />
+
+      <div title="Deselect All" id="deselect-all-button" class="selection-button" onclick="deselectAll()">
+        <img src="{{ url_for('static', filename='icons/blackCross.png')}}" alt="Close selection" />
+      </div>
+
+      <div title="Delete" id="delete-button" class="selection-button" onclick="deleteImages()">
+        <img src="{{ url_for('static', filename='icons/deleteButton.png')}}" alt="Delete" />
+      </div>
     </div>
   </div>
 </div>
@@ -40,8 +51,10 @@
   <div id="viewer">
     <img id="viewer-img" class="viewer-img" src="" alt="Viewer" />
     <div id="viewer-zoom" class="viewer-img-zoom" alt="Result"></div>
+    <div id="info-panel" class="info-panel" style="display: none;"></div>
   </div>
 </div>
+
 
 <script type="text/javascript">
   let buttonsMenu = document.getElementById("buttons-menu");
