--- a/project/templates/recently_deleted.html
+++ b/project/templates/recently_deleted.html
@@ -10,10 +10,10 @@
 <div id="file-container" class="box">
   <table id="file-manager" class="container">
     <tr class="files-header">
-      <td id="sort-name" class="header-option" onclick="update(NAME)"><div>Name</div></td>
-      <td id="sort-date" class="header-option" onclick="update('date')"><div><h1>Date Taken</h1></div></td>
-      <td id="sort-type" class="header-option" onclick="update(TYPE)"><div>Type</div></td>
-      <td id="sort-size" class="header-option" onclick="update(SIZE)"><div>Size</div></td>
+      <td title="Sort by File Name" id="sort-name" class="header-option" onclick="update(NAME)"><div>Name</div></td>
+      <td title="Sort by Date Taken/Date Uploaded" id="sort-date" class="header-option" onclick="update('date')"><div><h1>Date Taken</h1></div></td>
+      <td title="Sort by File Type" id="sort-type" class="header-option" onclick="update(TYPE)"><div>Type</div></td>
+      <td title="Sort by File Size" id="sort-size" class="header-option" onclick="update(SIZE)"><div>Size</div></td>
     </tr>
   </table>
 </div>
