--- a/project/static/css/gallery.css
+++ b/project/static/css/gallery.css
@@ -1,3 +1,8 @@
+body {
+  height: 100%;
+  overflow-y: hidden;
+}
+
 #buttons-menu {
   margin: 0 auto;
   position: fixed;
@@ -230,7 +235,7 @@ img.gallery-item, .item-overlay {
 }
 
 #viewer {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -340,28 +345,6 @@ img.gallery-item, .item-overlay {
 .info-row h1 {
   color: black;
   padding-inline: 1rem;
-}
-
-.notification-overlay {
-  background: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 7;
-}
-.notification {
-  background: rgba(255, 255, 255);
-  display: flex;
-  border-radius: 0.5rem;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
-  padding: 1rem;
 }
 
 #confirm-button {
