--- a/project/templates/file_manager.html
+++ b/project/templates/file_manager.html
@@ -2,7 +2,8 @@
 
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_bare.css') }}">
-  <script src="{{ url_for('static', filename='js/recently_deleted.js') }}" type="text/javascript"></script>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/file_manager.css') }}">
+  <script src="{{ url_for('static', filename='js/file_manager.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
@@ -35,7 +36,16 @@
   </div>
 </div>
 
-<h1 class="title">Recently Deleted</h1>
+<div id="upload-frame" class="upload-frame">
+  <div id="upload">
+    <label for="upload-button">
+      <img id="upload-image"  title="Upload Media" src="{{ url_for('static', filename='icons/uploadButton.png')}}" alt="Upload" />
+    </label>
+  </div>
+  <input type="file" id="upload-button" title="Upload" multiple />
+</div>
+
+<h1 class="title">File Manager</h1>
 <div id="file-container" class="box">
   <table id="file-manager" class="container">
     <tr class="files-header">
