File manager code previews + fixed load thumbnails

--- a/project/templates/recently_deleted.html
+++ b/project/templates/recently_deleted.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block head %}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/prism.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_bare.css') }}">
+  <script src="{{ url_for('static', filename='js/file_bare.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/recently_deleted.js') }}" type="text/javascript"></script>
 {% endblock %}
 
@@ -47,8 +50,9 @@
   </table>
 </div>
 
-<div id="preview" class="preview">
-  <h1 class="close-button" onclick="closePreview()">Close</h1>
+<div id="preview-container" class="preview-container">
+  <div id="preview" class="preview"></div>
+  <h1 id="close-preview" class="close-button" onclick="closePreview()">Close</h1>
 </div>
 
 <script type="text/javascript">
