--- a/project/static/css/file_bare.css
+++ b/project/static/css/file_bare.css
@@ -37,6 +37,8 @@ td {
     overflow: hidden;
     height: 1rem;
     padding-inline-end: .6rem;
+    min-width: 1.5rem;
+    margin-left: 0.2rem;
 }
 
 .name {
@@ -118,18 +120,17 @@ td {
     border-radius: .5rem;
 }
 #preview-button h1 {
-    font-size: x-large;
+    font-size: xx-large;
     color: #dbdbdb;
+    padding: 1rem 3rem;
 }
 #preview-button:hover {
     background: #177668;
 }
 
 .preview {
-    margin: auto;
     display: none;
     font-size: large;
-    background: #000000b8;
     flex-direction: column;
     border-radius: 0.5rem;
 }
@@ -151,11 +152,37 @@ td {
 }
 
 .close-button {
-    position: fixed;
+    display: none;
+    position: relative;
     width: 3rem;
     max-height: 3rem;
+    z-index: 1;
+    user-select: none;
+    -webkit-user-select: none;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    border-radius: 0.5rem;
+    background: #18a791;
+    padding: 1.5rem 2.5rem;
+    overflow: hidden;
 }
 .close-button:hover {
     background: rgb(76, 76, 76);
 }
 
+
+pre {
+    max-height: 30rem;
+    border-radius: 0.5rem;
+}
+
+.preview-container {
+    margin: auto;
+    display: none;
+    min-width: 30%;
+    max-width: 40%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
