--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Storage Saver</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='icons/favicon.ico') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <script src="{{ url_for('static', filename='js/base.js') }}" type="text/javascript"></script>
     {% block head %}
     {% endblock%}
+    <!-- Fix conflicts with bulma and prism formatting -->
+    {% if ignore_highlighting %}
+    <style>
+        .token.number, .token.tag { all: inherit; } 
+    </style>
+    {% endif %}
 </head>
 
 <body>
