--- a/project/templates/file_manager.html
+++ b/project/templates/file_manager.html
@@ -1,13 +1,15 @@
 {% extends "base.html" %}
 
 {% block head %}
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/themes/prism.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/prism.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_bare.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/file_manager.css') }}">
+  <script src="{{ url_for('static', filename='js/file_bare.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/file_manager.js') }}" type="text/javascript"></script>
 {% endblock %}
 
 {% block content %}
-
 <div id="preview-button" class="file-option-button" onclick="previewFile()">
   <h1 class="file-option-button-label">Preview</h1>
 </div>
@@ -57,11 +59,13 @@
   </table>
 </div>
 
-<div id="preview" class="preview">
-  <h1 class="close-button" onclick="closePreview()">Close</h1>
+<div id="preview-container" class="preview-container">
+  <div id="preview" class="preview"></div>
+  <h1 id="close-preview" class="close-button" onclick="closePreview()">Close</h1>
 </div>
 
 <script type="text/javascript">
   allFiles = {{ files | tojson }};
 </script>
+
 {% endblock %}
