--- a/project/static/css/file_manager.css
+++ b/project/static/css/file_manager.css
@@ -19,3 +19,36 @@
 .upload-frame:hover {
     background: rgba(0, 0, 0, 0.2);
 }
+
+.upload-queue {
+    position: fixed;
+    display: flex;
+    left: 0;
+    bottom: 0;
+    margin: 1rem;
+    flex-direction: column;
+}
+.upload-notification {
+    border-radius: 0.5rem;
+    background: rgb(236, 236, 236);
+    opacity: 1;
+    color: black;
+    padding: 2rem;
+    font-size: x-large;
+    display: flex;
+    align-items: center;
+    margin: 0.5rem;
+
+    transition: opacity 1.5s;
+    -webkit-transition: opacity 1.5s;
+}
+.upload-queue:before {
+    top: 0;
+    /* Use your background color, assuming white: */
+    background-image: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0));
+}
+.upload-queue:after {
+    bottom: 0;
+    /* Use your background color, assuming white: */
+    background-image: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0));
+}
