--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -21,6 +21,14 @@
 </head>
 
 <body>
+    <div id="contextMenu" class="context-menu">
+        <ul>
+            <li id="context-copy" onclick="copyEvent();"><a href="#">Copy</a></li>
+            <li id="context-paste" onclick="pasteEvent();"><a href="#">Paste</a></li>
+            <li id="context-delete" onclick="deleteEvent();"><a href="#">Delete</a></li>
+        </ul>
+    </div>
+  
     <section id="top-level" class="hero is-primary is-fullheight">
         <div class="hero-head">
             <nav class="navbar">
