--- a/project/templates/file_manager.html
+++ b/project/templates/file_manager.html
@@ -33,7 +33,7 @@
     <img src="{{ url_for('static', filename='icons/blackCross.png')}}" alt="Close selection" />
   </div>
 
-  <div title="Delete" id="delete-button" class="file-option-button" onclick="deleteFiles()">
+  <div title="Delete" id="delete-button" class="file-option-button" onclick="archiveFiles()">
     <img src="{{ url_for('static', filename='icons/deleteButton.png')}}" alt="Delete" />
   </div>
 </div>
