--- a/project/static/css/file_bare.css
+++ b/project/static/css/file_bare.css
@@ -14,6 +14,8 @@ td {
     text-align: left;
     text-overflow: ellipsis;
     width: 25%;
+    white-space: nowrap;
+    max-width: 50rem;
 }
 
 .header-option div {
