--- a/project/static/css/file_manager.css
+++ b/project/static/css/file_manager.css
@@ -38,17 +38,8 @@
     display: flex;
     align-items: center;
     margin: 0.5rem;
+    max-width: 50rem;
 
     transition: opacity 1.5s;
     -webkit-transition: opacity 1.5s;
-}
-.upload-queue:before {
-    top: 0;
-    /* Use your background color, assuming white: */
-    background-image: linear-gradient(to bottom, rgba(255,255,255,1), rgba(255,255,255,0));
-}
-.upload-queue:after {
-    bottom: 0;
-    /* Use your background color, assuming white: */
-    background-image: linear-gradient(to top, rgba(255,255,255,1), rgba(255,255,255,0));
 }
