--- a/project/static/css/gallery.css
+++ b/project/static/css/gallery.css
@@ -31,6 +31,8 @@ img.menu-button { max-width: 100%; max-height: 100%; }
   padding: 1.3rem;
   position: relative;
 
+  background: #00d1b2;
+
   text-align: center;
   text-decoration: none;
   transition: color 100ms;
