--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -23,8 +23,9 @@
 <body>
     <div id="contextMenu" class="context-menu">
         <ul>
+            <li id="context-select" onclick="selectEvent();"><a href="#">Select</a></li>
             <li id="context-copy" onclick="copyEvent();"><a href="#">Copy</a></li>
-            <li id="context-paste" onclick="pasteEvent();"><a href="#">Paste</a></li>
+            <li id="context-paste" onclick="pasteEvent();"><a href="#" style="color: #414141;">Paste</a></li>
             <li id="context-delete" onclick="deleteEvent();"><a href="#">Delete</a></li>
         </ul>
     </div>
