--- a/project/static/css/profile.css
+++ b/project/static/css/profile.css
@@ -72,3 +72,86 @@
     margin: 40px auto;
 
 }
+
+
+/* Settings */
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 6rem;
+  height: 3.4rem;
+  margin: 1rem;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 2.6rem;
+  width: 2.6rem;
+  left: 0.4rem;
+  bottom: 0.4rem;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 0.1rem #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(2.6rem);
+  -ms-transform: translateX(2.6rem);
+  transform: translateX(2.6rem);
+}
+
+.slider {
+  border-radius: 3.6rem;
+}
+
+.slider:before {
+  border-radius: 50%;
+}
+
+.settings-container {
+    display: flex;
+    position: relative;
+    width: 60rem;
+    margin: auto;
+    flex-direction: column;
+    width: 100%;
+}
+.setting {
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    position: relative;
+    align-items: center;
+}
+.setting h1 {
+    font-size: x-large;
+    font-weight: 300;
+}
