--- a/project/templates/gallery.html
+++ b/project/templates/gallery.html
@@ -3,6 +3,12 @@
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/gallery.css') }}">
   <script src="{{ url_for('static', filename='js/gallery.js') }}" type="text/javascript"></script>
+  {% if pixelated %}
+    <style>
+      #viewer img { image-rendering: pixelated; }
+      .viewer-img-zoom { image-rendering: pixelated; }
+    </style>
+  {% endif %}
 {% endblock %}
 
 {% block content %}
@@ -39,7 +45,6 @@
 </div>
 
 <div class="container">
-  <div id="viewer-menu" class="viewer-menu"></div>
   <div id="viewer">
     <div style="height: 90%; width: 60%; display: grid; resize: both;">
       <img id="viewer-img" class="viewer-img" src="" alt="Viewer" />
