--- a/project/templates/all_files.html
+++ b/project/templates/all_files.html
@@ -56,7 +56,7 @@
   <input type="file" id="upload-button" title="Upload" multiple />
 </div>
 
-<h1 class="title">File Manager</h1>
+<h1 class="title">All Files</h1>
 <div id="file-container" class="box">
   <table id="file-manager" class="container">
     <tr class="files-header">
