--- a/project/static/css/file_bare.css
+++ b/project/static/css/file_bare.css
@@ -135,9 +135,10 @@ td {
     font-size: large;
     flex-direction: column;
     border-radius: 0.5rem;
+    width: 100%;
 }
 .preview h1 {
-    height: 30rem;
+    height: 50rem;
     padding: 1rem;
     border-radius: 0.5rem;
     display: flex;
@@ -146,10 +147,37 @@ td {
     background: rgba(0, 0, 0, 0.7);
 }
 .preview img {
-    height: 30rem;
+    width: 100%;
     padding: 1rem;
     display: flex;
     background: #ffffff;
+    border-radius: 0.5rem;
+    object-fit: contain;
+}
+
+.preview * {
+    width: 100%;
+}
+
+.preview-container {
+    margin: auto;
+    display: none;
+    min-width: 30%;
+    max-width: 35%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: fixed;
+    right: 0;
+    height: 100%;
+    top: 0;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+pre {
+    max-height: 50rem;
+    min-height: 40rem;
     border-radius: 0.5rem;
 }
 
@@ -157,7 +185,7 @@ td {
     display: none;
     position: relative;
     width: 3rem;
-    max-height: 3rem;
+    max-height: 5rem;
     z-index: 1;
     user-select: none;
     -webkit-user-select: none;
@@ -168,27 +196,10 @@ td {
     background: #18a791;
     padding: 1.5rem 2.5rem;
     overflow: hidden;
+    width: 20rem;
+    font-size: xx-large;
 }
 .close-button:hover {
     background: rgb(76, 76, 76);
 }
 
-
-pre {
-    max-height: 30rem;
-    border-radius: 0.5rem;
-}
-
-.preview-container {
-    margin: auto;
-    display: none;
-    min-width: 30%;
-    max-width: 40%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    position: fixed;
-    right: 0;
-    height: 100%;
-    top: 0;
-}
