--- a/project/templates/profile.html
+++ b/project/templates/profile.html
@@ -2,10 +2,31 @@
 
 {% block head %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/profile.css') }}">
+  <script src="{{ url_for('static', filename='js/format.js') }}" type="text/javascript"></script>
   <script src="{{ url_for('static', filename='js/profile.js') }}" type="text/javascript"></script>
-{% endblock %}
+  {% endblock %}
 
 {% block content %}
+<div id="progress-container">
+  <div id="progress-labels">
+    <h1 id="progress-label">...</h1>
+    <h1 id="progress-max">...</h1>
+  </div>
+  <svg width="250" height="250" viewBox="0 0 250 250" id="progress" class="circular-progress">
+    <circle class="bg"></circle>
+    <circle class="fg"></circle>
+  </svg>
+</div>
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages%}
+<div class="notification is-danger" id="prompt-notification">
+    {{ message }}
+</div>
+{% endfor %}
+{% endif %}
+
 <div class="container">
   <div class="email">
 
@@ -13,12 +34,28 @@
       Email
     </h1>
 
-    <h1 class="subheader" id="email-text">
+    <h1 class="subheader" id="email-text" onclick="showEmailPrompt(true)">
       {{current_user.email}}
     </h1>
     <h1 class="email-tooltip">
       Change email?
     </h1>
+
+    <div class="box" id="change-email">
+      <form method="POST" action="/changeEmail">
+        <div class="field">
+            <div class="control">
+                <input class="input is-large" type="email" name="old-email" placeholder="Old Email" autofocus="">
+            </div>
+        </div>
+        <div class="field">
+            <div class="control">
+                <input class="input is-large" type="email" name="new-email" placeholder="New Email">
+            </div>
+        </div>
+        <button class="button is-block is-info is-large is-fullwidth">Confirm</button>
+      </form>
+    </div>
 
   </div>
 
@@ -39,16 +76,6 @@
       fillRandomPassword("{{current_user.password}}");
     </script>
 
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in messages%}
-    <div class="notification is-danger" id="password-notification">
-        {{ message }}
-    </div>
-    {% endfor %}
-    {% endif %}
-    {% endwith %}
-
     <div class="box" id="change-password">
       <form method="POST" action="/changePassword">
         <div class="field">
@@ -68,22 +95,19 @@
   </div>
 </div>
 
-{% with messages = get_flashed_messages() %}
 {% if messages %}
 <script type="text/javascript">
-  showPasswordPrompt();
+  let notif = "{{ messages }}";
+  if (notif.includes("email"))
+    showEmailPrompt();
+  else
+    showPasswordPrompt();
+  checkNotifications(notif);
 </script>
 {% endif %}
 {% endwith %}
 
-<div id="settings-container" class="settings-container">
-  <!-- <div class="setting">
-    <label class="switch">
-      <input type="checkbox" onclick="toggleSetting('image-quality')">
-      <span class="slider"></span>
-    </label>
-  </div> -->
-</div>
+<div id="settings-container" class="settings-container"></div>
 
 <script type="text/javascript">
   loadSettings(JSON.parse('{{settings | tojson}}'), JSON.parse('{{user_settings | tojson}}'));
